# vexo-crm

./: .env.dist  .gitignore  .pre-commit-config.yaml  alembic.ini  allow_actions.json  pyproject.toml
src/vexo/application/: dtos.py  exceptions.py
src/vexo/application/factories/: organization.py  role.py  session.py  user.py
src/vexo/application/handlers/auth/: change_password.py  login.py  logout.py  me.py  registration.py
src/vexo/application/handlers/organization/: create.py  get.py
src/vexo/application/handlers/role/: create.py
src/vexo/application/ports/: __init__.py  hasher.py  id_generator.py  idp.py  verifier.py
src/vexo/application/ports/repositories/: organization.py  permission.py  role.py  session.py  user.py
src/vexo/bootstrap/: config.py  seed.py
src/vexo/bootstrap/entrypoints/: web.py
src/vexo/bootstrap/ioc/: __init__.py  application.py  context.py  database.py  infrastructure.py
src/vexo/domain/entities/: common.py  organization.py  permission.py  role.py  session.py  user.py
src/vexo/infrastructure/adapters/: hasher.py  id_generator.py  idp.py  verifier.py
src/vexo/infrastructure/persistence/adapters/: common.py  organization_repository.py  permission_repository.py  role_repository.py  session_repository.py  user_repository.py
src/vexo/infrastructure/persistence/migrations/: env.py
src/vexo/infrastructure/persistence/tables/: __init__.py  organizations.py  permissions.py  roles.py  sessions.py  users.py
src/vexo/presentation/web/: __init__.py  exception_handler.py
src/vexo/presentation/web/middleware/: __init__.py
(+8 files in other folders)
